# req-bot

./: .gitignore  .pre-commit-config.yaml  BRAND_GUIDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  architecture.md  branding.md  docker-compose.yml  future-extensions.md  package-lock.json  package.json  pyproject.toml  turbo.json
apps/backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  package.json  pyproject.toml  requirements_bot.db
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: ae8371ad187a_initial_schema.py  b1c2d3e4f5g6_add_conversation_state_tracking.py  c7d8e9f0a1b2_add_usage_tracking.py  fac73c6a8081_add_oauth_state_table.py
apps/backend/requirements_bot/: api_server.py  cli.py  cli_helpers.py
apps/backend/requirements_bot/api/: auth.py  decorators.py  dependencies.py  error_handlers.py  exceptions.py  main.py  middleware.py  rate_limiting.py  schemas.py  validation.py
apps/backend/requirements_bot/api/routes/: auth.py  auth.py.backup  questions.py  sessions.py
apps/backend/requirements_bot/api/services/: interview_service.py
apps/backend/requirements_bot/core/: constants.py  conversation_state.py  document.py  io_interface.py  logging.py  memory_storage.py  models.py  pipeline.py  prompts.py  recovery.py  session_manager.py  state_manager.py  storage.py
apps/backend/requirements_bot/core/database_models/: __init__.py
apps/backend/requirements_bot/core/interview/: question_queue.py
apps/backend/requirements_bot/core/persistence/: question_synchronizer.py  session_persistence_service.py
apps/backend/requirements_bot/core/services/: __init__.py  answer_crud_service.py  completeness_assessment_service.py  exceptions.py  interview_loop_manager.py  oauth_callback_validator.py  oauth_config_service.py  oauth_redirect_config.py  oauth_state_service.py  question_crud_service.py  question_generation_service.py  question_service.py  refresh_token_service.py  session_cookie_config.py  session_finalization_service.py  session_response_builder.py  session_service.py  session_setup_manager.py  token_config.py  user_authentication_service.py  user_registration_service.py  user_service.py
apps/backend/requirements_bot/providers/: anthropic.py  base.py  exceptions.py  google.py  openai.py
apps/backend/specscribe/: api_server.py  cli.py  cli_helpers.py
apps/backend/specscribe/api/: auth.py  decorators.py  dependencies.py  error_handlers.py  exceptions.py  main.py  middleware.py  rate_limiting.py  schemas.py
apps/backend/specscribe/api/routes/: auth.py  questions.py  sessions.py  usage.py
apps/backend/specscribe/api/services/: interview_service.py
apps/backend/specscribe/core/: constants.py  conversation_state.py  document.py  interview_constants.py  io_interface.py  logging.py  migration_manager.py  models.py  pipeline.py  recovery.py  session_manager.py  state_manager.py  state_validation.py  storage.py  storage_interface.py
apps/backend/specscribe/core/database_models/: __init__.py
apps/backend/specscribe/core/interview/: interview_conductor.py  question_queue.py  utils.py
apps/backend/specscribe/core/persistence/: __init__.py  answer_synchronizer.py  question_synchronizer.py  requirement_synchronizer.py  session_persistence_service.py
apps/backend/specscribe/core/services/: __init__.py  answer_crud_service.py  completeness_assessment_service.py  exceptions.py  interview_loop_manager.py  oauth_callback_validator.py  oauth_config_service.py  oauth_redirect_config.py  oauth_state_service.py  question_crud_service.py  question_generation_service.py  (+11 more)
apps/backend/specscribe/providers/: anthropic.py  base.py  exceptions.py  google.py  openai.py
apps/backend/tests/: README_AUTH_TESTING.md  conftest_auth.py  test_conversation_state.py  test_crash_simulation.py  test_interview_service.py  test_logging.py  test_migrations.py  test_question_generation_service.py  test_state_manager.py  test_storage.py  test_usage_tracking_service.py
apps/backend/tests/api/: conftest.py  test_answers_crud.py  test_auth.py  test_basic_functionality.py  test_data_validation.py  test_error_handling.py  test_questions_crud.py  test_quota_enforcement.py  test_sessions.py  test_utils.py
apps/backend/tests/fixtures/: auth_fixtures.py
apps/backend/tests/mocks/: __init__.py  mock_provider.py
apps/backend/tests/security/: test_authentication_security.py
apps/backend/tests/unit/: __init__.py  test_oauth_callback_validator.py  test_oauth_redirect_config.py  test_rate_limiting.py  test_session_cookie_config.py  test_user_authentication_service.py  test_user_registration_service.py
(+229 files in other folders)
