[tool.poetry]
name = "requirements-bot"
version = "0.1.0"
description = "A bot to help figure out software requirements."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typer = "0.16.0"
pydantic = "2.11.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
