[tool.poetry]
name = "requirements-bot"
version = "0.1.0"
description = "A bot to help figure out software requirements."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typer = "0.16.0"
pydantic = "2.11.7"
sqlalchemy = "2.0.43"
alembic = "1.16.4"
openai = "1.99.9"
google-genai = "1.30.0"
anthropic = "0.64.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
