[tool.poetry]
name = "requirements-bot"
version = "0.1.0"
description = "A bot to help figure out software requirements."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typer = "0.19.2"
pydantic = {extras = ["email"], version = "2.12.0"}
sqlalchemy = "2.0.44"
alembic = "1.16.5"
openai = "2.3.0"
google-genai = "1.43.0"
anthropic = "0.69.0"
prompt-toolkit = "3.0.52"
rich = "14.2.0"
fastapi = "0.118.3"
uvicorn = "0.37.0"
authlib = "1.6.5"
python-jose = {extras = ["cryptography"], version = "3.5.0"}
python-dotenv = "1.1.1"
itsdangerous = "2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
coverage = "7.10.7"
ruff = "0.14.0"
pre-commit = "4.3.0"
httpx = "0.28.1"
mypy = "1.18.2"
types-authlib = "1.6.5.20251005"
types-python-jose = "3.5.0.20250531"

[tool.coverage.run]
source = ["requirements_bot"]
branch = true
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/migrations/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["alembic/"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "PLC0415",  # import-outside-top-level
]
ignore = [
    "B904",  # Within `except` clause, raise exceptions with `raise ... from err`
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["requirements_bot"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
